--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "typeface-roboto": "0.0.54"
+  },
+  "engines": {
+    "node": "11.12.0",
+    "npm": "6.9.0"
   }
 }
