--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
+    "@babel/node": "^7.0.0",
     "@babel/core": "^7.4.3",
     "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
-    "babel-cli": "^6.26.0",
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
