--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
@@ -27,20 +28,23 @@
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
     "json-loader": "^0.5.7",
     "mongodb": "^3.2.3",
+    "url-loader": "^1.1.2",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
-    "@babel/node": "^7.0.0",
     "@babel/core": "^7.4.3",
+    "@babel/node": "^7.0.0",
     "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-player": "^1.11.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
