--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.0.0",
     "@material-ui/core": "^3.9.3",
+    "@material-ui/styles": "^4.0.0",
     "axios": "^0.18.0",
     "history": "^4.9.0",
     "react": "^16.8.6",
