--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
+    "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "json-loader": "^0.5.7",
     "mongodb": "^3.2.3",
+    "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.2",
