--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "axios": "^0.19.0",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-player": "^1.11.1",
