--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/styles": "^4.0.0",
     "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.2.1",
