--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=1221
 
-USERNAME=constructionalaffection@gmail.com
-PASSWORD=Layng1234
+USERNAME=chase@constructionalaffection.com
+PASSWORD=Layng1234$
 
 API_KEY=*
