--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ USERNAME=chase@constructionalaffection.com
 PASSWORD=Layng1234$
 
 API_KEY=*
+
+ACCESS_KEY_ID=AKIASM4ZSN5B6RXEEG7P
+SECRET_ACCESS_KEY=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
+REGION=ca-central-1
