--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/node": "^7.0.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/styles": "^4.0.0",
+    "aws-sdk": "^2.484.0",
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "history": "^4.9.0",
