--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.2.1",
     "react": "^16.8.6",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
     "react-player": "^1.11.1",
     "react-redux": "^7.0.2",
