--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@babel/node": "^7.0.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/styles": "^4.0.0",
+    "aws-amplify": "^1.1.29",
+    "aws-amplify-react": "^2.3.9",
     "aws-sdk": "^2.484.0",
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
@@ -56,6 +58,7 @@
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "s3-streams": "^0.4.0",
     "typeface-roboto": "0.0.54"
   },
   "engines": {
