--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
   "dependencies": {
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.0.0",
+    "@google-cloud/translate": "^4.1.1",
     "@material-ui/core": "^3.9.3",
     "@material-ui/styles": "^4.0.0",
     "aws-sdk": "^2.484.0",
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
+    "google-translate": "^2.3.0",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.2.1",
