--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.2.1",
+    "player.js": "^0.1.0",
     "react": "^16.8.6",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
