--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Constructional Affection web app full-stack-react",
   "main": "src/app/index.js",
   "scripts": {
-    "build": "webpack -p && react-snapshot",
+    "build": "webpack -p",
     "test": "test",
     "start": "npm run server",
     "dev": "webpack-dev-server --open",
@@ -58,7 +58,6 @@
     "react-player": "^1.11.1",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
-    "react-snapshot": "^1.3.0",
     "redux": "^4.0.1",
     "typeface-roboto": "0.0.54"
   },
