--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "file-loader": "^3.0.1",
     "json-loader": "^0.5.7",
     "mongodb": "^3.2.3",
+    "static-site-generator-webpack-plugin": "^3.4.2",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.17.2",
