--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.2",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
+    "jest": "^24.8.0",
     "json-loader": "^0.5.7",
     "mongodb": "^3.2.3",
     "static-site-generator-webpack-plugin": "^3.4.2",
