--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "jest": "^24.8.0",
+    "jsdom": "^15.1.1",
+    "jsdom-global": "^3.0.2",
     "json-loader": "^0.5.7",
     "mongodb": "^3.2.3",
     "static-site-generator-webpack-plugin": "^3.4.2",
@@ -58,6 +60,8 @@
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "match-media": "^0.2.0",
+    "node-sass": "^4.12.0",
     "nodemailer": "^6.2.1",
     "player.js": "^0.1.0",
     "react": "^16.8.6",
@@ -68,6 +72,7 @@
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "sass-loader": "^7.2.0",
     "typeface-roboto": "0.0.54"
   },
   "engines": {
