--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "sass-loader": "^7.2.0",
+    "terser-webpack-plugin": "^1.4.1",
     "typeface-roboto": "0.0.54"
   },
   "engines": {
