--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "dotenv": "^8.0.0",
     "google-translate": "^2.3.0",
     "history": "^4.9.0",
+    "is-wsl": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "match-media": "^0.2.0",
