--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
   "devDependencies": {
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.2",
     "body-parser": "^1.19.0",
-    "concurrently": "^4.1.0",
+    "concurrently": "^6.5.1",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "enzyme": "^3.10.0",
@@ -40,7 +42,7 @@
     "jsdom-global": "^3.0.2",
     "json-loader": "^0.5.7",
     "mongodb": "^3.2.3",
-    "static-site-generator-webpack-plugin": "^3.4.2",
+    "static-site-generator-webpack-plugin": "^3.3.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.17.2",
@@ -50,13 +52,12 @@
   "dependencies": {
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.0.0",
-    "@google-cloud/translate": "^4.1.1",
-    "@material-ui/core": "^3.9.3",
+    "@google-cloud/translate": "^6.3.1",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/styles": "^4.0.0",
     "aws-sdk": "^2.484.0",
-    "axios": "^0.19.0",
+    "axios": "^0.24.0",
     "dotenv": "^8.0.0",
-    "google-translate": "^2.3.0",
     "history": "^4.9.0",
     "is-wsl": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
